[gd_scene load_steps=31 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/PlayerStateSprint.gd" type="Script" id=2]
[ext_resource path="res://src/Entity.gd" type="Script" id=3]
[ext_resource path="res://src/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://src/PlayerStateIdle.gd" type="Script" id=5]
[ext_resource path="res://src/PlayerStateRun.gd" type="Script" id=6]
[ext_resource path="res://src/InteractionArea.gd" type="Script" id=7]
[ext_resource path="res://scenes/DebugUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/MainCamera.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/PlayerStateAttackLevel4.gd" type="Script" id=10]
[ext_resource path="res://src/CollisionBoxes.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 26 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28, 29 )

[sub_resource type="Animation" id=3]
resource_name = "Attack Back"

[sub_resource type="Animation" id=4]
resource_name = "Attack Front"

[sub_resource type="Animation" id=5]
resource_name = "Attack Left"

[sub_resource type="Animation" id=6]
resource_name = "Attack Right"

[sub_resource type="Animation" id=7]
resource_name = "Doge Back"
length = 0.4

[sub_resource type="Animation" id=8]
resource_name = "Doge Front"
length = 0.4

[sub_resource type="Animation" id=9]
resource_name = "Doge Left"
length = 0.4

[sub_resource type="Animation" id=10]
resource_name = "Doge Right"
length = 0.4

[sub_resource type="Animation" id=11]
resource_name = "Idle Back"
length = 2.0
loop = true

[sub_resource type="Animation" id=12]
resource_name = "Idle Front"
length = 2.0
loop = true
step = 0.05

[sub_resource type="Animation" id=13]
resource_name = "Idle Left"
length = 2.0
loop = true

[sub_resource type="Animation" id=14]
resource_name = "Idle Right"
length = 2.0
loop = true

[sub_resource type="Animation" id=15]
length = 0.001

[sub_resource type="Animation" id=16]
resource_name = "Run Back"
length = 0.6
loop = true
step = 0.05

[sub_resource type="Animation" id=17]
resource_name = "Run Front"
length = 0.6
loop = true
step = 0.05

[sub_resource type="Animation" id=18]
resource_name = "Run Left"
length = 0.6
loop = true
step = 0.05

[sub_resource type="Animation" id=19]
resource_name = "Run Right"
length = 0.6
loop = true
step = 0.05

[node name="PlayerLevel4" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -32 )

[node name="InteractionArea" type="Area2D" parent="."]
position = Vector2( 0, -32 )
collision_layer = 0
collision_mask = 128
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
modulate = Color( 0.686667, 1, 0.6, 1 )
shape = SubResource( 1 )

[node name="PositionPivot" type="Position2D" parent="."]
position = Vector2( 0, -32 )

[node name="CollisionBoxes" type="Position2D" parent="PositionPivot"]
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Idle")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
attack_recover_time = 0.1

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Sprint" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Attack Back" = SubResource( 3 )
"anims/Attack Front" = SubResource( 4 )
"anims/Attack Left" = SubResource( 5 )
"anims/Attack Right" = SubResource( 6 )
"anims/Doge Back" = SubResource( 7 )
"anims/Doge Front" = SubResource( 8 )
"anims/Doge Left" = SubResource( 9 )
"anims/Doge Right" = SubResource( 10 )
"anims/Idle Back" = SubResource( 11 )
"anims/Idle Front" = SubResource( 12 )
"anims/Idle Left" = SubResource( 13 )
"anims/Idle Right" = SubResource( 14 )
anims/RESET = SubResource( 15 )
"anims/Run Back" = SubResource( 16 )
"anims/Run Front" = SubResource( 17 )
"anims/Run Left" = SubResource( 18 )
"anims/Run Right" = SubResource( 19 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugUI" parent="CanvasLayer" instance=ExtResource( 8 )]
entity_path = NodePath("../..")

[node name="Camera2D" parent="." instance=ExtResource( 9 )]
